Fixed copyright notices

--- a/README
+++ b/README
@@ -1,9 +1,25 @@
-SQL::Shell v1.15
+SQL::Shell v1.16
 
-(c) BBC 2006. This program is free software; you can redistribute it and/or modify it under the GNU GPL.
-Enhancements and bug-fixes (c) 2016 Miguel Gualdron under the GNU GPL.
+SQL-Shell:  Interactive shell for DBI Databases
+Copyright (C) 2006  BBC
+Copyright (C) 2019  Miguel Gualdron
 
-See the file COPYING in this distribution, or http://www.gnu.org/licenses/gpl.txt 
+This program is free software; you can redistribute it and/or modify
+it under the terms of the GNU General Public License as published by
+the Free Software Foundation; either version 2 of the License, or
+(at your option) any later version.
+
+This program is distributed in the hope that it will be useful,
+but WITHOUT ANY WARRANTY; without even the implied warranty of
+MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+GNU General Public License for more details.
+
+You should have received a copy of the GNU General Public License
+along with this program; if not, write to the Free Software
+Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+
+See the file COPYING in this distribution, or https://www.gnu.org/licenses/gpl-2.0.html
+
 
 QUICK START:
 
@@ -26,3 +42,24 @@ The unit test script will trash any tables in this database (hence point at an e
 
 Run 'perldoc SQL::Shell' to read the full documentation.
 
+
+RECENT CHANGES
+
+v1.16
+
+Corrected the copyright notices throughout the code to properly match the 
+COPYING file already distributed with the module.
+
+Added new commands 'send' and 'recv' to give users better control of how 
+their commands are interpreted.
+
+Simplified the functionality of the 'show tables' command to improve 
+performance on platforms with large numbers of tables.
+
+Enabled logging in some methods that were lacking this functionality.
+
+
+
+v1.15
+
+Fixed several long-standing issues.  All of them were minor.
