--- a/README
+++ b/README
@@ -32,18 +32,26 @@ commands in the source directory:
     make install
     Then delete the source directory tree since it's no longer needed.
 
-To run the unit test against a database, define the following environment variables before running "make test":
+The optional database unit tests have been optimized for SQLite.  If you want 
+to run these, please install
 
-   UNIT_TEST_DSN (a DBI DSN)
-   UNIT_TEST_USER
-   UNIT_TEST_PASS
+    DBD::SQLite
 
-The unit test script will trash any tables in this database (hence point at an empty database).
+and set the following environment variables as follows before running
+"make test":
+
+   UNIT_TEST_DSN="DBI:SQLite:dbname=test.db"
+   UNIT_TEST_USER=anything
+   UNIT_TEST_PASS=
+
+The unit test script will create a file called t/data/test.db, and will 
+remove it at the end of the testing.
 
 Run 'perldoc SQL::Shell' to read the full documentation.
 
 
 RECENT CHANGES
+
 
 v1.16
 
@@ -51,13 +59,17 @@ Corrected the copyright notices throughout the code to properly match the
 COPYING file already distributed with the module.
 
 Added new commands 'send' and 'recv' to give users better control of how 
-their commands are interpreted.
+their commands are interpreted when they don't match predefined patterns.
 
 Simplified the functionality of the 'show tables' command to improve 
-performance on platforms with large numbers of tables.
+performance on platforms with large numbers of tables. (The old functionality 
+is still present in the new 'show tablecounts' command.)
 
-Enabled logging in some methods that were lacking this functionality.
+Added a new command 'show settings' to list some of the shell's internal 
+parameters.  More of the settings will be added to this listing in the future.
 
+Modified the DB tests to work best with SQLite, as it was nearly impossible 
+to maintain compatibility with all DB platforms.
 
 
 v1.15
